# NeuraScope

./: .gitignore  README.md  analysis_util.py  app.py  feeds.py  main.py  navigator.db  neurascope.db  neurascope.db.bak  pyproject.toml  schema.sql  translate_util.py
paper/: arxiv_fetcher.py
templates/: article.html  favorites.html  feeds.html  index.html  paper.html
