[project]
name = "neurascope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "dotenv>=0.9.9",
    "feedparser>=6.0.11",
    "flask>=3.1.0",
    "openai>=1.77.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "tiktoken>=0.9.0",
]
